model/unpackaged/objects/SIP_Connection__c.object
<CustomObject>
    <fields>
        <fullName>All_Or_None__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only valid for SFDC connections.

If true, any failed records in a call cause all changes for the call to be rolled back. Record changes aren&apos;t committed unless all records are processed successfully.</inlineHelpText>
        <label>All Or None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charset__c</fullName>
        <label>Charset</label>
        <picklist>
            <picklistValues>
                <fullName>MS Windows Latin1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTF-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO 8859-15 Latin 9 (Western European)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connection_Name__c</fullName>
        <label>Connection Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Connection_Type__c</fullName>
        <label>Connection Type</label>
        <picklist>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filesystem</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Date_Format__c</fullName>
        <inlineHelpText>If none of the Date Format pick list values match the date format of CSV files then input in this field the custom date format to be used. Date Format uses the Java SimpleDateFormat notation.</inlineHelpText>
        <label>Custom Date Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Format__c</fullName>
        <label>Date Format</label>
        <picklist>
            <picklistValues>
                <fullName>MM/dd/yyyy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM-dd-yyyy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM.dd.yyyy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd/MM/yyyy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd-MM-yyyy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd.MM.yyyy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM/dd/yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM-dd-yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM.dd.yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd/MM/yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd-MM-yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd.MM.yyyy HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM/dd/yyyy HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM-dd-yyyy HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM.dd.yyyy HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd/MM/yyyy HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd-MM-yyyy HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd.MM.yyyy HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy-MM-dd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy-MM-dd HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy-MM-dd HH:mm:ss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy-MM-ddTHH:mm:ss.SSSZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy/MM/dd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy/MM/dd HH:mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yyyy/MM/dd HH:mm:ss</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Directory__c</fullName>
        <label>Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <label>Hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Server__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com/services/Soap/u/22&quot;</defaultValue>
        <label>Login Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Timeout__c</fullName>
        <label>Login Timeout</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>SIP Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_ID__c</columns>
        <columns>Connection_Type__c</columns>
        <columns>Connection_Name__c</columns>
        <columns>Batch_Size__c</columns>
        <columns>Directory__c</columns>
        <columns>Date_Format__c</columns>
        <columns>Hostname__c</columns>
        <columns>Login_Server__c</columns>
        <columns>Username__c</columns>
        <columns>Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CON{00000000}</displayFormat>
        <label>SIP Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>